# petgestor-digital-hub

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  appointments.py  auth.py  clients.py  dashboard.py  invoices.py  pets.py  products.py  profiles.py  reports.py  sales.py  services.py  subscription.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  appointment.py  client.py  invoice.py  invoice_item.py  password_reset.py  pet.py  product.py  profile.py  sale.py  sale_item.py  service.py  user.py
backend/app/schemas/: appointment.py  auth.py  base.py  client.py  dashboard.py  invoice.py  pet.py  product.py  report.py  sale.py  service.py  subscription.py  user.py
backend/app/services/: mailer.py  reporting.py  stripe_service.py
backend/app/utils/: tokens.py
docs/: backend-architecture.md
frontend/src/: index.css
frontend/supabase/: config.toml
src/: App.tsx
src/components/: AppointmentForm.tsx  PrivacyPolicyModal.tsx  ProtectedRoute.tsx  SaleForm.tsx  TermsOfServiceModal.tsx  ViewInvoice.tsx
src/constants/: plans.ts
src/contexts/: AuthContext.tsx
src/hooks/: useCalculateSaleStats.ts  useClientsPets.ts  useSales.ts  useSubscriptionStatus.ts
src/pages/: Appointments.tsx  Clients.tsx  ConfirmEmail.tsx  (+13 more)
supabase/: config.toml
(+80 files in other folders)
